--- a/index.html
+++ b/index.html
@@ -22,5 +22,122 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <!--Main-->
+    <main>
+      <!--Hero-->
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <!--Our advantages-->
+      <section>
+        <h2>Наші переваги</h2>
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!--What do we do?-->
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/desktop.jpg"
+              alt="десктоп"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/mobile.jpg"
+              alt="мобільний телефон"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/color.jpg"
+              alt="глибина кольору"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <!--Our team-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/Igor.jpg"
+              alt="Ігор Дем'яненко"
+              width="270"
+              height="260"
+            />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/Olga.jpg"
+              alt="Ольга Рєпіна"
+              width="270"
+              height="260"
+            />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/Mykola.jpg"
+              alt="Микола Тарасов"
+              width="270"
+              height="260"
+            />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Myhailo.jpg"
+              alt="Михайло Єрмаков"
+              width="270"
+              height="260"
+            />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
