--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!--Header-->
     <header>
-      <p>Web<span>Studio</span></p>
+      <a href="" lang="en">Web<span>Studio</span></a>
       <nav>
         <ul>
           <li><a href="">Студія</a></li>
@@ -139,5 +139,22 @@
         </ul>
       </section>
     </main>
+    <!--Footer-->
+    <footer>
+      <a href="" lang="en">Web<span>Studio</span></a>
+      <address>
+        <a
+          href="https://goo.gl/maps/dqY5QBXwFPovs5Bk7"
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+        >
+          м. Київ, пр-т Лесі Українки, 26</a
+        >
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
