--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </section>
       <!--Our advantages-->
       <section>
-        <h2>Наші переваги</h2>
+        <h2 hidden>Наші переваги</h2>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
