--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li>
             <img
               src="./images/desktop.jpg"
-              alt="десктоп"
+              alt="десктопні технології"
               width="370"
               height="294"
             />
@@ -77,7 +77,7 @@
           <li>
             <img
               src="./images/mobile.jpg"
-              alt="мобільний телефон"
+              alt="мобільні технології"
               width="370"
               height="294"
             />
